# rust_weather_api

./: Cargo.toml  Dockerfile  README.md
scripts/: e2e_test.py  e2e_test.sh
src/: lib.rs  main.rs  netcdf_merge.rs
tests/: api_test.rs
